@@ -33,3 +33,4 @@ Steve Lacy		<gallery@slacy.com>
 Dr. Tilman Bubeck	<t.bubeck@reinform.de>
 Troy Edwards		<vallimar@sexorcisto.net>
 Martin Smallridge 	<info@snailsource.com>
+Vincent Furia		<vmf@abtech.org>
