@@ -1,0 +1,7 @@
+
+We would like to send a big "THANK YOU" to
+Vincent Furia <vmf@abtech.org> for let us use his GeekLog integration code.
+
+For the Gallery Team,
+
+Jens Tkotz, 2004
