@@ -94,6 +94,14 @@ if(isset($GALLERY_EMBEDDED_INSIDE)) {
 
 		include ($phpbb_root_path . "includes/page_header.php");
 	break;
+
+	case 'GeekLog':
+		/* 
+		** Display header and left blocks 
+		*/
+		COM_siteHeader();
+	break;
+
 	}
 }
 ?>
