@@ -1,3 +1,9 @@
+2004-02-10 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b25 
+
+	* Gallery can now run embedded in GeekLog (http://www.geeklog.net)
+	  - Added New Section in Step2 to set embedded type and Geeklog Path
+	  - Added GeekLog classes so that Galley uses their users.
+
 2004-02-09  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b24
 
 	* Fixed a bug in gallery_remote2.php which caused all directories
